testdata/typechecker/error/portfolio_UndefFunc.java
// Tests that calls to an undefined function error.

int main() {
    UndefFunc();
    return 0;
}
